# Vulkan-tests

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
Instancing/: CMakeLists.txt
Instancing/src/: main.cppm  my_app.ixx  process.cppm  vulkan.cppm
Instancing/src/Core/: app_default.ixx
Instancing/src/Core/helpers/: fontatlas.ixx
TestImTerm/: CMakeLists.txt
TestImTerm/src/: main.cpp  terminal_commands.cpp  terminal_commands.hpp
Triangle/: CMakeLists.txt
Triangle/src/: app.ixx  app_process.cppm  app_vulkan.cppm  main.cppm  main.cxx  my_app.ixx
Triangle/src/Core/: app.ixx
Triangle/src/Core/helpers/: files.ixx  glfw.ixx  vk.ixx
Triangle/src/my_app/: app_process.cppm  app_vulkan.cppm  my_app.ixx  process.cppm  vulkan.cppm
Triangle/src/my_app/helpers/: files.ixx  glfw.ixx  vk.ixx
assets/: shader_compiler.ps1
assets/2d_color/: vert.glsl
assets/2d_color-with-texture/: frag.glsl  vert.glsl
assets/2d_color-with-ubo/: frag.glsl  vert.glsl
assets/fonts_atlas/: shonen_punk.json
assets/hardcoded_triangle/: frag.glsl  vert.glsl
assets/instancing/: frag.glsl  vert.glsl
include/: logging.hxx
include/imterm/: terminal.tpp
include/real_modules/: app.ixx.h  app_default.ixx.h
include/real_modules/helpers/: files.ixx.h  glfw.ixx.h  vk.ixx.h
